@@ -2,7 +2,7 @@
 from Products.Five import BrowserView
 from collective.portlet.discussion.utility.interfaces import ICommentsListUtility
 from zope.component import getUtility
-from zope.component.interfaces import ComponentLookupError
+from zope.interface.interfaces import ComponentLookupError
 
 
 class View(BrowserView):
