@@ -1,17 +1,15 @@
-from Products.CMFCore.utils import getToolByName
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from collective.portlet.discussion import DiscussionPortletMessageFactory as _
-from plone.app.form.widgets.uberselectionwidget import UberSelectionWidget
+# from plone.app.form.widgets.uberselectionwidget import UberSelectionWidget
 from plone.app.portlets.portlets import base
 from plone.app.vocabularies.catalog import SearchableTextSourceBinder
 from plone.portlets.interfaces import IPortletDataProvider
-from urllib import urlencode
+from six.moves.urllib.parse import urlencode
 from zope import schema
-from zope.formlib import form
-from zope.interface import implements
+from zope.interface import implementer
 from collective.portlet.discussion.utility.interfaces import ICommentsListUtility
 from zope.component import getUtility
-from zope.component.interfaces import ComponentLookupError
+from zope.interface.interfaces import ComponentLookupError
 
 
 class IDiscussionPortlet(IPortletDataProvider):
@@ -43,14 +41,13 @@ class IDiscussionPortlet(IPortletDataProvider):
                               description=_(u"Specify how many discussions will be shown in the portlet."))
 
 
+@implementer(IDiscussionPortlet)
 class Assignment(base.Assignment):
     """Portlet assignment.
 
     This is what is actually managed through the portlets UI and associated
     with columns.
     """
-
-    implements(IDiscussionPortlet)
 
     def __init__(self, portletTitle='', nDiscussions=5, discussionFolder=None, discussionState=''):
         self.portletTitle = portletTitle
@@ -122,14 +119,10 @@ class Renderer(base.Renderer):
 
 
 class AddForm(base.AddForm):
-    """Portlet add form.
-
-    This is registered in configure.zcml. The form_fields variable tells
-    zope.formlib which fields to display. The create() method actually
-    constructs the assignment that is being added.
-    """
-    form_fields = form.Fields(IDiscussionPortlet)
-    form_fields['discussionFolder'].custom_widget = UberSelectionWidget
+    """Portlet add form."""
+    schema = IDiscussionPortlet
+    # TODO We may need to change the widget.
+    # form_fields['discussionFolder'].custom_widget = UberSelectionWidget
     label = _(u"Add Discussion Portlet")
     description = _(u"This portlet displays a list of comments.")
 
@@ -138,12 +131,9 @@ class AddForm(base.AddForm):
 
 
 class EditForm(base.EditForm):
-    """Portlet edit form.
-
-    This is registered with configure.zcml. The form_fields variable tells
-    zope.formlib which fields to display.
-    """
-    form_fields = form.Fields(IDiscussionPortlet)
-    form_fields['discussionFolder'].custom_widget = UberSelectionWidget
+    """Portlet edit form."""
+    schema = IDiscussionPortlet
+    # TODO We may need to change the widget.
+    # form_fields['discussionFolder'].custom_widget = UberSelectionWidget
     label = _(u"Edit Discussion Portlet")
     description = _(u"This portlet displays a list of comments.")
