@@ -8,22 +8,24 @@ setup(name='collective.portlet.discussion',
       description="A simple Plone portlet to show a list of comments",
       long_description=open("README.rst").read() + "\n" +
                        open(os.path.join("docs", "HISTORY.txt")).read(),
-      # Get more strings from http://www.python.org/pypi?%3Aaction=list_classifiers
+      # Get more strings from https://pypi.org/classifiers/
       classifiers=[
         "Framework :: Plone",
-        "Framework :: Plone :: 3.3",
-        "Framework :: Plone :: 4.0",
-        "Framework :: Plone :: 4.1",
-        "Framework :: Plone :: 4.2",
-        "Framework :: Plone :: 4.3",
-        "Development Status :: 4 - Beta",
+        "Framework :: Plone :: 5.2",
+        "Framework :: Plone :: 6.0",
+        "Development Status :: 5 - Production/Stable",
         "Programming Language :: Python",
+        "Programming Language :: Python :: 2.7",
+        "Programming Language :: Python :: 3.6",
+        "Programming Language :: Python :: 3.7",
+        "Programming Language :: Python :: 3.8",
+        "Programming Language :: Python :: 3.9",
         "Topic :: Software Development :: Libraries :: Python Modules",
         ],
       keywords='discussion portlet comments',
       author='RedTurtle Technology',
       author_email='sviluppoplone@redturtle.it',
-      url='http://plone.org/products/collective.portlet.discussion',
+      url='https://github.com/RedTurtle/collective.portlet.discussion',
       license='GPL',
       packages=find_packages(exclude=['ez_setup']),
       namespace_packages=['collective', 'collective.portlet'],
@@ -32,6 +34,7 @@ setup(name='collective.portlet.discussion',
       install_requires=[
           'setuptools',
           'plone.app.discussion',
+          'six',
       ],
       entry_points="""
       # -*- entry_points -*-
